# ollama-agent-simulation

./: .dockerignore  .env.example  .gitignore  Dockerfile.consumer  Dockerfile.provider  Makefile  README.md  agreements.json  app.py  catalog.txt  consumer_agent.py  docker-compose.yml  provider_agent.py  provider_server.py  pyproject.toml
.streamlit/: config.toml
consumer/: app.py  mcp_client.py  ui.py
contracts/: foundry.toml
contracts/deployments/: local.json
contracts/script/: Deploy.s.sol
contracts/src/: BandwidthEscrow.sol  BandwidthNFT.sol
docs/: CODEBASE_GUIDE.md  decisions.md  how-it-works.md  implementation_design_rationale.md  implementation_update.md  system_design_and_rationale_paper_section.md
docs/superpowers/plans/: 2026-04-20-dashboard-ui-revamp.md  2026-04-20-smart-contract-settlement.md  2026-04-21-mcp-a2a.md  2026-04-27-paper-impl-alignment.md
docs/superpowers/specs/: 2026-04-20-dashboard-ui-revamp-design.md
provider/: app.py  catalog.py  gateway.py  inventory.txt  mcp_server.py
shared/: contracts.py
shared/abi/: BandwidthEscrow.json  BandwidthNFT.json
tests/: test_catalog.py  test_mcp_client.py
